quantum: Fix gate menu overflowing on mobile

--- a/timApp/static/scripts/tim/plugin/quantumcircuit/quantum-gate-menu.component.scss
+++ b/timApp/static/scripts/tim/plugin/quantumcircuit/quantum-gate-menu.component.scss
@@ -18,6 +18,8 @@ svg text::selection {
   flex-direction: column;
   border: 1px solid black;
   max-width: 50vw;
+  max-height: 120px;
+  overflow-y: auto;
 }
 
 .gate-container-static-height {
@@ -30,7 +32,7 @@ svg text::selection {
 }
 
 .gate-list {
-  padding: 0.25em;
+  padding: 0.25em 0.5em 0.25em 0.25em;
 }
 
 .svg-container {
